fix: Simplify Page component usage in SM01693, SM01694, and SM01696; adjust gap styling in Page component and enhance QuestionWithChoices for default values

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,17 @@ input[type="number"] {
 }
 
 input,
-textarea {
+textarea,
+select {
+  @apply font-mono font-bold;
+}
+
+input[type="checkbox"]:checked + label,
+input[type="radio"]:checked + label {
+  @apply font-bold;
+}
+
+input[type="checkbox"] + label,
+input[type="radio"] + label {
   @apply font-mono;
 }
